Use SPDX license expression

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [{name = "George Stuyt"}]
 description = "Create axes from top left of figure in centimetres to simplify scientific figure generation"
 dependencies = ["matplotlib", "numpy"]
 readme = "README.rst"
-license = "GPLv3"
+license = "GPL-3.0-or-later"
 license-files = ["LICENSE"] 
 
 [tool.setuptools.packages.find]
