--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,9 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: python -m pip install --upgrade pip setuptools matplotlib numpy
-    - name: Add utilites to path
-      shell: bash
-      run: 'tests\' >> $GITHUB_PATH
+    # - name: Add utilites to path
+    #   shell: bash
+    #   run: echo 'tests\' >> $GITHUB_PATH
     - name: Test with pytest
       run: |
         pip install pytest
