--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       # run: python -m pip install --upgrade pip setuptools matplotlib numpy
-      run: pip install . -e
+      run: pip install -e .
     # - name: Add utilites to path
     #   shell: bash
     #   run: echo 'tests\' >> $GITHUB_PATH
