--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,26 @@ dependencies = ["matplotlib", "numpy"]
 readme = "README.rst"
 license = "GPL-3.0-or-later"
 license-files = ["LICENSE"] 
+keywords = [
+    "matplotlib-figures",
+    "scientific-papers",
+    "thesis-template",
+    "matplotlib-styles",
+    "python"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Framework :: Matplotlib",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Programming Language :: Python",
+    "Topic :: Artistic Software",
+    "Topic :: Multimedia :: Graphics :: Presentation",
+    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
+    "Topic :: Scientific/Engineering :: Visualization"]
+
+[project.urls]
+Repository = "https://github.com/ogeesan/scilayout.git"
+Issues = "https://github.com/ogeesan/scilayout/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]
