--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ name = "scilayout"
 dynamic = ["version"]
 authors = [{name = "George Stuyt"}]
 description = "Create axes from top left of figure in centimetres to simplify scientific figure generation"
-dependencies = ["matplotlib", "numpy"]
+dependencies = [
+    "matplotlib",
+    "numpy",
+]
 readme = "README.rst"
 license = "GPL-3.0-or-later"
 license-files = ["LICENSE"] 
@@ -39,3 +42,21 @@ exclude = ["tests*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "scilayout.__version__"}
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "FBT001", # positional boolean kwarg
+    "FBT002", # positional boolean kwarg
+    "PLR0913", # too many arguments for a function
+    "TD", # the formats of todos
+    "RUF013", # implicit optional
+    "UP025", # deprecation warning for importing Tuple from typing
+    ]
+
+[dependency-groups]
+dev = [
+    "ipython>=8.12.3",
+    "pyqt5==5.15.11", # windows compatibility
+    "pyqt5-qt5==5.15.2", # windows compatibility
+]
