--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,18 +13,16 @@ jobs:
       with:
         python-version: '3.x'
     - name: Install dependencies
-      # run: python -m pip install --upgrade pip setuptools matplotlib numpy
       run: pip install -e .
-    # - name: Add utilites to path
-    #   shell: bash
-    #   run: echo 'tests\' >> $GITHUB_PATH
     - name: Test with pytest
       run: |
-        pip install pytest
+        pip install pytest defusedxml
         pytest tests/
 
   build:
     name: Build distribution
+    needs:
+    - test
     runs-on: ubuntu-latest
 
     steps:
