--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,5 +21,5 @@ jobs:
     #   run: echo 'tests\' >> $GITHUB_PATH
     - name: Test with pytest
       run: |
-        pip install pytest
+        pip install pytest defusedxml
         pytest tests/
