--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,11 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["D", "ANN201"]
+"tests/*" = [
+    "D",    # docstring
+    "ANN",  # type annotations
+    "S101", # assert
+]
 
 [dependency-groups]
 dev = [
